--- a/index.html
+++ b/index.html
@@ -3,10 +3,81 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mykino</title>
+  <title>Jaxon Kinolar</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Mykino saytiga xush kelibsiz!</h1>
-  <p>Bu sayt orqali siz turli jahon kinolarini o'zbek tilida ko'rishingiz mumkin.</p>
+  <header>
+    <div class="logo">MY KINO</div>
+    <nav>
+      <a href="#">Kinolar</a>
+      <a href="#">Multfilmlar</a>
+      <a href="#">Seriallar</a>
+    </nav>
+   
+  </header>
+   
+                  <div class="search-box">
+          <input type="text" id="searchInput" placeholder="Qidiruv...">
+          <div id="loader" class="loader hidden"></div>
+        </div>
+      </header>
+  
+
+  <main>
+    <h1>KINOLAR</h1>
+    <div class="movie-grid">
+      <div class="movie">
+        <img src="images/thunderbolts.jpg" alt="Thunderbolts">
+        <p>Momag'aldiroqlar 2025</p>
+      </div>
+      <div class="movie">
+        <img src="images/novakain.jpg" alt="Novakain">
+        <p>Novakain</p>
+      </div>
+      <div class="movie">
+        <img src="images/redhood.jpg" alt="Red Riding Hood">
+        <p>Qizil qalpoqcha</p>
+      </div><div class="movie">
+        <img src="images/novakain.jpg" alt="Novakain">
+        <p>Novakain</p>
+      </div><div class="movie">
+        <img src="images/novakain.jpg" alt="Novakain">
+        <p>Novakain</p>
+      </div><div class="movie">
+        <img src="images/novakain.jpg" alt="Novakain">
+        <p>Novakain</p>
+      </div><div class="movie">
+        <img src="images/novakain.jpg" alt="Novakain">
+        <p>Novakain</p>
+      </div><div class="movie">
+        <img src="images/novakain.jpg" alt="Novakain">
+        <p>Novakain</p>
+      </div>
+      <!-- Yana filmlar qo'shishingiz mumkin -->
+    </div>
+  </main>
+  <script>
+    const input = document.getElementById('searchInput');
+    const loader = document.getElementById('loader');
+  
+    let timeout = null;
+    input.addEventListener('input', () => {
+      clearTimeout(timeout);
+      loader.classList.remove('hidden'); // loader ko‘rsatiladi
+  
+      // Simulyatsiya: qidiruv natijasi 1.5 sekundda tayyor bo‘ladi
+      timeout = setTimeout(() => {
+        loader.classList.add('hidden'); // loader yashiriladi
+        // Bu yerda qidiruv funksiyasini yozishingiz mumkin
+      }, 1500);
+    });
+  </script>
+  <a href="https://t.me/your_channel/123" class="tg-button" target="_blank">Telegramda ko‘rish</a>
+  <div class="movie">
+    <img src="images/thunderbolts.jpg" alt="Thunderbolts">
+    <p>Momag'aldiroqlar 2025</p>
+    <a href="https://t.me/+d0NyGFb_xes2ZTky" class="tg-button" target="_blank">Telegramda ko'rish</a>
+  </div>
 </body>
 </html>
