--- a/index.html
+++ b/index.html
@@ -39,21 +39,11 @@
         <img src="images/redhood.jpg" alt="Red Riding Hood">
         <p>Qizil qalpoqcha</p>
       </div><div class="movie">
+        <div>
         <img src="images/novakain.jpg" alt="Novakain">
         <p>Novakain</p>
-      </div><div class="movie">
-        <img src="images/novakain.jpg" alt="Novakain">
-        <p>Novakain</p>
-      </div><div class="movie">
-        <img src="images/novakain.jpg" alt="Novakain">
-        <p>Novakain</p>
-      </div><div class="movie">
-        <img src="images/novakain.jpg" alt="Novakain">
-        <p>Novakain</p>
-      </div><div class="movie">
-        <img src="images/novakain.jpg" alt="Novakain">
-        <p>Novakain</p>
-      </div>
+   
+      
       <!-- Yana filmlar qo'shishingiz mumkin -->
     </div>
   </main>
