--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       }, 1500);
     });
   </script>
-  <a href="https://t.me/your_channel/123" class="tg-button" target="_blank">Telegramda ko‘rish</a>
+  <a href="https://t.me/+d0NyGFb_xes2ZTky" class="tg-button" target="_blank">Telegramda ko‘rish</a>
   <div class="movie">
     <img src="images/thunderbolts.jpg" alt="Thunderbolts">
     
