--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <header>
+    <div class="container">
     <div class="logo">MY KINO</div>
     <nav>
       <a href="#">Kinolar</a>
@@ -28,45 +29,33 @@
     <h1>KINOLAR</h1>
     <div class="movie-grid">
       <div class="movie">
-        <img src="images/thunderbolts.jpg" alt="Thunderbolts">
-        <p>Momag'aldiroqlar 2025</p>
+        <h2>
+        <img src="sweet.home.jpg" alt="sweet Home">
+        <p>Jonajon uy</p>
       </div>
       <div class="movie">
-        <img src="images/novakain.jpg" alt="Novakain">
-        <p>Novakain</p>
+        <img src="minecraft kino.jpg" alt="MineCraft">
+        <p>Minecraft</p>
       </div>
       <div class="movie">
-        <img src="images/redhood.jpg" alt="Red Riding Hood">
-        <p>Qizil qalpoqcha</p>
+        <img src="ojiz qahramon.jpg" alt="Qaytmas">
+        <p>Qaytmas</p>
       </div><div class="movie">
         <div>
-        <img src="images/novakain.jpg" alt="Novakain">
-        <p>Novakain</p>
-   
-      
-      <!-- Yana filmlar qo'shishingiz mumkin -->
+        <img src="belbogli zobit.jpg" alt="">
+        <p>Qora belbog'li zobit</p>   
+        </h2>  
     </div>
+  </div>
   </main>
   <script>
     const input = document.getElementById('searchInput');
     const loader = document.getElementById('loader');
   
-    let timeout = null;
-    input.addEventListener('input', () => {
-      clearTimeout(timeout);
-      loader.classList.remove('hidden'); // loader ko‘rsatiladi
-  
-      // Simulyatsiya: qidiruv natijasi 1.5 sekundda tayyor bo‘ladi
-      timeout = setTimeout(() => {
-        loader.classList.add('hidden'); // loader yashiriladi
-        // Bu yerda qidiruv funksiyasini yozishingiz mumkin
-      }, 1500);
-    });
+   
   </script>
-  <a href="https://t.me/+d0NyGFb_xes2ZTky" class="tg-button" target="_blank">Telegramda ko‘rish</a>
-  <div class="movie">
-    <img src="images/thunderbolts.jpg" alt="Thunderbolts">
-    
+  <a href="https://t.me/+d0NyGFb_xes2ZTky" class="tg-button" target="_blank">Telegramda ko'rish</a>
+<script src="main.js"></script>    
   </div>
 </body>
 </html>
