--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="movie-grid">
       <div class="movie">
         <h2>
-        <img src="sweet.home.jpg" alt="sweet Home">
+       < img src=sweet-home.jpg>
         <p>Jonajon uy</p>
       </div>
       <div class="movie">
