--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <div class="movie">
         <h2>
        < img src=sweet.home.jpg>
+          <alt=""Sweet home">
         <p>Jonajon uy</p>
       </div>
       <div class="movie">
