--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
     <h1>KINOLAR</h1>
     <div class="movie-grid">
       <div class="movie">
-        <h2>
-       < img src=sweet.home.jpg>
-          <alt=""Sweet home">
+       < img src="sweet.home.jpg">
+          <alt="Sweet home">
         <p>Jonajon uy</p>
       </div>
       <div class="movie">
@@ -45,7 +44,7 @@
         <div>
         <img src="belbogli zobit.jpg" alt="">
         <p>Qora belbog'li zobit</p>   
-        </h2>  
+      
     </div>
   </div>
   </main>
