--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <h1>KINOLAR</h1>
     <div class="movie-grid">
       <div class="movie">
-       < img src="sweet.home.jpg">
-          <alt="Sweet home">
+        <h2>
+        <img src="sweet home.jpg" alt="sweet Home">
         <p>Jonajon uy</p>
       </div>
       <div class="movie">
@@ -44,11 +44,14 @@
         <div>
         <img src="belbogli zobit.jpg" alt="">
         <p>Qora belbog'li zobit</p>   
-      
+        </h2>  
     </div>
   </div>
   </main>
+  <script>
   
+   
+  </script>
   <a href="https://t.me/+d0NyGFb_xes2ZTky" class="tg-button" target="_blank">Telegramda ko'rish</a>
 <script src="main.js"></script>    
   </div>
